kubernetes/apps/docmost/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docmost
  labels:
    toolkit.fluxcd.io/tenant: dev-team
